force-app/main/default/objects/Applicant_Document__c/Applicant_Document__c.object-meta.xml
<CustomObject>
    <!-- Master-Detail to Loan_Application__c ensures document records cascade with the application lifecycle. -->
    <label>Applicant Document</label>
    <nameField>
        <displayFormat>DOC-{00000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>