force-app/main/default/objects/Applicant_Document__c/fields/Agent_Comment__c.field-meta.xml
<CustomField>
    <fullName>Agent_Comment__c</fullName>
    <label>Agent Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>