force-app/main/default/objects/Applicant_Document__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>KYC</fullName>
        </value>
        <value>
            <fullName>Income</fullName>
        </value>
        <value>
            <fullName>Address</fullName>
        </value>
        <value>
            <fullName>Collateral</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>