force-app/main/default/objects/Applicant_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>PAN Card</fullName>
        </value>
        <value>
            <fullName>Aadhaar Card</fullName>
        </value>
        <value>
            <fullName>Passport</fullName>
        </value>
        <value>
            <fullName>Driving License</fullName>
        </value>
        <value>
            <fullName>Voter ID</fullName>
        </value>
        <value>
            <fullName>Bank Statement 3 months</fullName>
        </value>
        <value>
            <fullName>Bank Statement 6 months</fullName>
        </value>
        <value>
            <fullName>Salary Slip</fullName>
        </value>
        <value>
            <fullName>Form 16</fullName>
        </value>
        <value>
            <fullName>ITR Acknowledgment</fullName>
        </value>
        <value>
            <fullName>GST Returns</fullName>
        </value>
        <value>
            <fullName>Business Registration</fullName>
        </value>
        <value>
            <fullName>Address Proof</fullName>
        </value>
        <value>
            <fullName>Photograph</fullName>
        </value>
        <value>
            <fullName>Property Documents</fullName>
        </value>
        <value>
            <fullName>Vehicle Documents</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>