force-app/main/default/objects/Applicant_Document__c/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>