force-app/main/default/objects/Applicant_Document__c/fields/Issue_Found__c.field-meta.xml
<CustomField>
    <fullName>Issue_Found__c</fullName>
    <label>Issue Found</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>None</fullName>
        </value>
        <value>
            <fullName>Missing</fullName>
        </value>
        <value>
            <fullName>Name Mismatch</fullName>
        </value>
        <value>
            <fullName>Expired</fullName>
        </value>
        <value>
            <fullName>Blurred</fullName>
        </value>
        <value>
            <fullName>Suspicious</fullName>
        </value>
        <value>
            <fullName>Forged</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>