force-app/main/default/objects/Applicant_Document__c/fields/OCR_Confidence__c.field-meta.xml
<CustomField>
    <fullName>OCR_Confidence__c</fullName>
    <label>OCR Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>