force-app/main/default/objects/Applicant_Document__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <label>Upload Date</label>
    <type>DateTime</type>
</CustomField>